<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etConsumptionName"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etConsumptionNameHint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etConsumptionNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etConsumptionNumberHint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/etConsumptionName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etConventionalUnits"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etConventionalUnitsHint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/etConsumptionNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeletePoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDeletePoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConsumptionName" />

</androidx.constraintlayout.widget.ConstraintLayout>