<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etMachineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etMachineNameHint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etStartFuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etStartFuelHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMachineName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewConsumptionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/btnAddNewConsumption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStartFuel"
        tools:ignore="SpeakableTextPresentCheck"/>

    <Button
        android:id="@+id/btnCreateNewMachine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateNewMachineText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddNewConsumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddNewConsumptionText"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateNewMachine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>